# lt_toolbox

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  contributing.html  environment.yml  genindex.html  index.html  installation.html  lt_toolbox-environment.yml  lt_toolbox-travis-CI.yml  mkdocs.yml  objects.inv  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  tutorials.html
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  reference.doctree  tutorials.doctree
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  reference.rst.txt  tutorials.rst.txt
conversions/: index.html
docs/: conf.py  contributing.rst  index.md  index.rst  installation.rst  reference.rst  requirements.txt  tutorials.rst
lt_toolbox/: __init__.py  add_utils.py  compute_array_utils.py  compute_utils.py  filter_utils.py  find_array_utils.py  find_utils.py  get_utils.py  map_array_utils.py  map_utils.py  plot_array_utils.py  plot_utils.py  test.ipynb  trajectories.py  trajectory_array.py  trajectory_frame.py
tracmass_scripts/: export_tracmass_to_csv.py  export_tracmass_to_nc.py  export_tracmass_to_parquet.py  export_tracmass_to_zarr.py
trajarray/: add.html  compute.html  filter.html  find.html  get.html  index.html  map.html  plot.html  use.html
trajframe/: add.html  compute.html  filter.html  get.html  index.html  plot.html  transform.html  use.html
tutorials/: LT_Toolbox_Testing_MITgcm_IrmSea.ipynb  LT_Toolbox_Tutorial.ipynb  LT_Toolbox_Tutorial_1_TrajArrays.ipynb  (+10 more)
(+263 files in other folders)
